login file updated

--- a/app/src/main/res/menu/activity_home_fragment_holder_drawer.xml
+++ b/app/src/main/res/menu/activity_home_fragment_holder_drawer.xml
@@ -5,29 +5,11 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_fasion"
+            android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Fasion &amp; Design" />
-        <item
-            android:id="@+id/nav_quotes"
-            android:icon="@drawable/ic_book_black_24dp"
-            android:title="Quotes" />
-        <item
-            android:id="@+id/nav_comedy"
-            android:icon="@drawable/ic_whatshot_black_24dp"
-            android:title="comedy" />
-        <item
-            android:id="@+id/nav_education"
-            android:icon="@drawable/ic_school_black_24dp"
-            android:title="Education" />
-        <item
-            android:id="@+id/nav_lifestyle"
-            android:icon="@drawable/ic_video_library_black_24dp"
-            android:title="Lifestyle" />
-        <item
-            android:id="@+id/nav_music"
-            android:icon="@drawable/ic_library_music_black_24dp"
-            android:title="Music" />
+            android:title="Home" />
+
+
     </group>
 
     <item android:title="Communicate">
